# CrustyBudget

./: .gitignore  Cargo.toml  README.md  TODO.md  package.json
axum-server/: Cargo.toml  README.md
axum-server/src/: main.rs
axum-server/src/api/: router.rs
axum-server/src/budget/: calc.rs  cc.rs  db.rs  expense.rs  income.rs  mod.rs
axum-server/src/types/: budget_structs.rs  enums.rs  mod.rs
src/: main.rs
src/api/: router.rs
src/budget/: calc.rs  db.rs  expense.rs  income.rs  mod.rs
src/types/: enums.rs
vite-frontend/: README.md  package-lock.json  package.json
vite-frontend/src/: App.tsx
vite-frontend/src/assets/: AddIncome.tsx
vite-frontend/src/components/: AddCCEntry.tsx  AddExpense.tsx  AddIncome.tsx
vite-frontend/src/layout/: MainLayout.tsx
vite-frontend/src/routes/: CreditDetails.tsx  EntryForms.tsx  ExpenseDetails.tsx  IncomeDetails.tsx  Summary.tsx
