[package]
name = "CrustyBudget"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = "1.49.0"
log = "0.4.29"
rust_decimal = "1.40.0"
env_logger = "0.11.8"
redb = "3.1.0"
rust_decimal_macros = "1.40.0"
tower-http = { version = "0.6.8", features = ["cors"] }
chrono = { version = "0.4.43", features = ["serde"] }
